# publictransportbus

./: .gitattributes  .gitignore  .gitmodules  Alerts.pb  CMakeLists.txt  Dockerfile  README.md  compile-all.sh  getprotod.cpp  getprotodo.cpp  getting_osm_gtfs_data_csv.cc  gettingosmdata.cc  gettingosmdata6.cc  gettingosmdatacopy.cc  gtfs-osm-compare.cpp  gtfs-realtime.pb.cc  gtfs-realtime.pb.h  gtfs-realtime.proto  gtfs_ktmb.zip:Zone.Identifier  gtfsrtoutput.cpp  isle-of-man-latest.osm.pbf:Zone.Identifier  listgtfs2.cpp  listgtfs22.cpp  listgtfs22copy.cpp  malaysia-singapore-brunei-latest.osm.pbf:Zone.Identifier  matchingbynam.cc  matchingbyref.cc  plaingtfs.cpp  quadtree3.cpp  quadtree3Modified.cpp  quadtree4Modified.cpp  readgt.h  readgtcopy.h  readingcsvcolumn.cpp  stops.txt  vinceinv.h  vincentyinversecopyy.cpp  vincentyinversedist.cpp
.github/workflows/: build-and-run.yml
forwardHMM/: hmm.cpp  hmm.h  mainhmm.cpp
